instruments/AIOUSB/DLL/CoreExports.pas


    if DataSize > $100 then begin
      SetLastError(ERROR_BAD_LENGTH);
      Exit;
    end;

    if DataSize = 0 then begin
      Result := ResolveDeviceIndex(diFirst);
      Exit;
    end;

    SetLength(ThisData, DataSize);
    for I := 0 to High(Dev) do begin
      ThisDataSize := DataSize;
      Status := CustomEEPROMRead(I, StartAddress, ThisDataSize, @ThisData[0]);
      if Status <> ERROR_SUCCESS then Continue;
      if ThisDataSize <> DataSize then Continue;

      bMatch := True;
      ipData := pData;
      for J := 0 to DataSize - 1 do begin
        if ThisData[J] <> ipData^ then begin
          bMatch := False;
          Break;
        end;
        Inc(ipData);
      end;
      if not bMatch then Continue;

      if Result = diNone then begin
        Result := I;
        MyLastError := ERROR_SUCCESS;
      end
      else begin
        MyLastError := ERROR_DUP_NAME;
      end;
    end;
    SetLastError(MyLastError);
  except
    Result := diNone;
    SetLastError(ERROR_INTERNAL_ERROR);
  end;
end;

function AIOUSB_ReloadDeviceLinks: LongWord; cdecl;
var
  I: Integer;

begin
  try
    Result := ERROR_SUCCESS;
    for I := 0 to High(Dev) do
      AIOUSB_CloseDevice(I)
    ;
    LoadDriverLinks;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;





function CustomEEPROMRead(DeviceIndex: LongWord; StartAddress: LongWord; var DataSize: LongWord; Data: Pointer): LongWord; cdecl;
begin
  if StartAddress > $FF then begin
    Result := ERROR_SEEK;
    Exit;
  end;
  if DataSize > (LongWord($100) - StartAddress) then begin
    Result := ERROR_BAD_LENGTH;
    Exit;
  end;

  Result := GenericVendorRead(DeviceIndex, $A2, $1E00 + StartAddress, 0, DataSize, Data);
end;

function CustomEEPROMWrite(DeviceIndex: LongWord; StartAddress: LongWord; DataSize: LongWord; Data: Pointer): LongWord; cdecl;
const
  BlockSize = 32;

begin
  try
    if StartAddress > $FF then begin
      Result := ERROR_SEEK;
      Exit;
    end;
    if DataSize > (LongWord($100) - StartAddress) then begin
      Result := ERROR_BAD_LENGTH;
      Exit;
    end;

    while DataSize > BlockSize do begin
      Result := GenericVendorWrite(DeviceIndex, $A2, $1E00 + StartAddress, 0, BlockSize, Data);
      if Result <> ERROR_SUCCESS then Exit;
      Inc(StartAddress, BlockSize);
      Dec(DataSize, BlockSize);
      Inc(PByte(Data), BlockSize);
    end;
    Result := GenericVendorWrite(DeviceIndex, $A2, $1E00 + StartAddress, 0, DataSize, Data);
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function AIOUSB_FlashRead(DeviceIndex: LongWord; StartAddress: LongWord; var DataSize: LongWord; Data: Pointer): LongWord; cdecl;
const
  BlockSize = 4096;

var
  ReadSize: LongWord;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if FlashSectors = 0 then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if StartAddress >= $200000 then begin
        Result := ERROR_SEEK;
        Exit;
      end;
      if DataSize > (LongWord($200000) - StartAddress) then begin
        Result := ERROR_BAD_LENGTH;
        Exit;
      end;
      if (DataSize and 1) <> 0 then begin
        DataSize := DataSize and $FFFFFFFE;
      end;

      while DataSize > BlockSize do begin
        ReadSize := BlockSize;
        Result := GenericVendorRead(DeviceIndex, AUR_FLASH_READWRITE, StartAddress shr 1, StartAddress shr 17, ReadSize, Data);
        if Result <> ERROR_SUCCESS then Exit;
        Inc(StartAddress, ReadSize);
        Dec(DataSize, ReadSize);
        Inc(PByte(Data), ReadSize);
      end;
      Result := GenericVendorRead(DeviceIndex, AUR_FLASH_READWRITE, StartAddress shr 1, StartAddress shr 17, DataSize, Data);
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function AIOUSB_FlashWrite(DeviceIndex: LongWord; StartAddress: LongWord; DataSize: LongWord; Data: Pointer): LongWord; cdecl;
const
  BlockSize = 4096;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if FlashSectors = 0 then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if StartAddress >= $200000 then begin
        Result := ERROR_SEEK;
        Exit;
      end;
      if DataSize > (LongWord($200000) - StartAddress) then begin
        Result := ERROR_BAD_LENGTH;
        Exit;
      end;
      if (DataSize and 1) <> 0 then begin
        DataSize := DataSize and $FFFFFFFE;
      end;

      while DataSize > BlockSize do begin
        Result := GenericVendorWrite(DeviceIndex, AUR_FLASH_READWRITE, StartAddress shr 1, StartAddress shr 17, BlockSize, Data);
        if Result <> ERROR_SUCCESS then Exit;
        Inc(StartAddress, BlockSize);
        Dec(DataSize, BlockSize);
        Inc(PByte(Data), BlockSize);
      end;
      Result := GenericVendorWrite(DeviceIndex, AUR_FLASH_READWRITE, StartAddress shr 1, StartAddress shr 17, DataSize, Data);
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function AIOUSB_FlashEraseSector(DeviceIndex: LongWord; Sector: Integer): LongWord; cdecl;
begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if FlashSectors = 0 then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if Sector >= FlashSectors then begin
        Result := ERROR_SEEK;
        Exit;
      end;

      Result := GenericVendorWrite(DeviceIndex, AUR_DEBUG_FLASH_ERASE, 0, Sector, 0, nil);
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function GetPipes(DeviceIndex: LongWord; var PipeCount: LongWord; pPipeData: PLongWord): LongWord; cdecl;
var
  bSuc: Boolean;
  InterfaceDescriptor: USB_INTERFACE_DESCRIPTOR;
  I, L: Integer;
  PipeInfo: WINUSB_PIPE_INFORMATION;
  pIPipeData: PLongWord;
  hDevice: THandle;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    case Dev[DeviceIndex].USBDriverType of
      dtCyUSB2, dtCyUSB3: begin
        Result := ERROR_NOT_SUPPORTED; //To generate the hint.
        Result := ERROR_NOT_SUPPORTED;
        Exit;
      end;
      dtWinUSB: begin
        hDevice := GetThreadHandleForDevice(DeviceIndex);
        SetLastError(ERROR_GEN_FAILURE);
        bSuc := WinUsb_QueryInterfaceSettings(hDevice, 0, @InterfaceDescriptor);
        if not bSuc then begin
          Result := GetMappedFailure(DeviceIndex);
          PipeCount := 0;
          Exit;
        end;

        if PipeCount < InterfaceDescriptor.bNumEndpoints then
          L := PipeCount
        else
          L := InterfaceDescriptor.bNumEndpoints
        ;
        PipeCount := InterfaceDescriptor.bNumEndpoints;

        pIPipeData := pPipeData;
        for I := 0 to L - 1 do begin
          pIPipeData^ := $FFFFFFFF;
          Inc(pIPipeData);
        end;

        pIPipeData := pPipeData;
        for I := 0 to L - 1 do begin
          bSuc := WinUsb_QueryPipe(hDevice, 0, I, @PipeInfo);
          if not bSuc then begin
            Result := GetMappedFailure(DeviceIndex);
            Exit;
          end;

          pIPipeData^ := PipeInfo.PipeId or (PipeInfo.PipeType shl 8);

          Inc(pIPipeData);
        end;
      end;
    end;

    Result := ERROR_SUCCESS;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function GetDeviceHandle(DeviceIndex: LongWord; pData: PHandle): LongWord; cdecl;
begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    pData^ := GetThreadHandleForDevice(DeviceIndex);
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function AIOUSB_UploadFirmware(DeviceIndex: LongWord; FirmBuf: PAnsiChar; BufLen: LongWord): LongWord; cdecl;
begin
  Result := ERROR_NOT_SUPPORTED;
end;

function StrToLines(S: AnsiString): TStringArray;
var
  Count, Capacity, iC, oC,
  L: Integer;

begin
  Count := 0;
  Capacity := 8;
  SetLength(Result, Capacity);
  S := S + #13;
  L := Length(S);
  iC := 1;
  oC := 1;
  while iC <= L do begin
    if (S[iC] = #13) or (S[iC] = #10) then begin
      if Count >= Capacity then begin
        Capacity := Capacity * 2;
        SetLength(Result, Capacity);
      end;
      Result[Count] := Copy(S, oC, iC - oC);
      Inc(Count);

      if (iC < L) and (S[iC] = #13) and (S[iC+1] = #10) then Inc(iC);
      oC := iC+1;
    end;
    Inc(iC);
  end;
  SetLength(Result, Count);
end;

function AIOUSB_UploadD15LoFirmwaresByPID(pFirmScript: PAnsiChar): LongWord; cdecl;
type
  THexChunk = record
    Addr: Word;
    Data: AnsiString;
  end;
  THexChunks = array of THexChunk;

  TPIDFirmData = record
    PID: Word;
    FirmContent: THexChunks;
  end;

  function ParseHex(HexStrs: TStringArray): THexChunks;
  var
    iLine, iChunk: Integer;
    ThisAddr, ThisData: AnsiString;

  begin
    //Validate hex file.
    SetLength(Result, 0);
    for iLine := 0 to High(HexStrs) do begin
      ThisData := HexStrs[iLine];
      if ThisData = '' then Continue;
      if ThisData[1] <> ':' then Exit;
      if not IsHex(Copy(ThisData, 2, MAXINT)) then Exit;
      if (Length(ThisData) and 1) = 0 then Exit; //If source line is even(has colon plus odd nybbles), reject as invalid.
    end;

    SetLength(Result, Length(HexStrs));
    iChunk := 0;
    for iLine := 0 to High(HexStrs) do begin
      ThisData := HexStrs[iLine];
      if ThisData = '' then Continue;
      if Copy(ThisData, 8, 2) <> '00' then Continue; //We only care about type 00 records.

      ThisAddr := Copy(ThisData, 4, 4);
      ThisData := Copy(ThisData, 10, Length(ThisData) - 11);

      Result[iChunk].Addr := HexToInt(ThisAddr);
      Result[iChunk].Data := HexToStr(ThisData);
      Inc(iChunk);
    end;
    SetLength(Result, iChunk);
  end;

var
  PFD: array of TPIDFirmData; //Loading the script would be a bit faster with pointers, but that's not much of an improvement, so safety is more important.
  iPF, iLine, iPath, iFirmware,
  I: Integer;
  ThisLine, PIDStr, FirmStr: AnsiString;
  DevicePath, FirmScript: TStringArray;
  FirmHex: THexChunks;
  hCyFile: THandle;
  Status: LongWord;
  ThisPID: Word;

begin
  try
    Result := 0;
    try
      FirmScript := StrToLines(pFirmScript);
      iPF := -1;
      for iLine := 0 to High(FirmScript) do begin
        ThisLine := FirmScript[iLine];
        if ThisLine = '' then Continue;
        if ThisLine[1] = ';' then Continue;

        SplitStr(ThisLine, '=', PIDStr, FirmStr);
        if PIDStr = '' then Continue;
        if FirmStr = '' then Continue;
        if not IsHex(PIDStr) then Continue;
        if not FileExists(String(FirmStr)) then Continue;

        try
          FirmStr := DumpFileToString(FirmStr);
          FirmStr := AnsiString(UpperCase(Trim(String(FirmStr))));
          FirmHex := ParseHex(StrToLines(FirmStr));
          if Length(FirmHex) = 0 then Continue;
        except
          Continue;
        end;

        Inc(iPF);
        SetLength(PFD, iPF+1);
        with PFD[iPF] do begin
          PID := HexToInt(PIDStr) and $7FFF;
          FirmContent := FirmHex;
        end;
      end;

      DevicePath := GetDevicePaths(D15LoClassGUID);
      for iPath := 0 to High(DevicePath) do begin
        ThisLine := DevicePath[iPath];
